--- a/src/assets/project.json
+++ b/src/assets/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "@lanaqi/autox-typescript-template",
+    "name": "@rabbit/szgd-assistance",
     "versionName": "0.0.1",
     "versionCode": 1,
     "packageName": "com.lanaqi.autox.template",
