--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@rabbit/szgd-assistance",
   "version": "0.0.1-alpha.1",
   "scripts": {
-    "build:hotupdate": "tsc hot-update/hot_update.ts --outDir dist/hot-update",
-    "watch:hotupdate": "tsc hot-update/hot_update.ts --outDir dist/hot-update --watch",
+    "build:hotupdate": "tsc hot-update/hot-update.ts --outDir dist/hot-update",
+    "watch:hotupdate": "tsc hot-update/hot-update.ts --outDir dist/hot-update --watch",
     "build:dev": "tsup --env.NODE_ENV=development",
     "build:prod": "tsup --env.NODE_ENV=production",
     "rerun:dev": "tsup --env.NODE_ENV=development --env.DEPLOY_ACTION=rerun",
